noticed sizing issue. it still exists if the page is too big. but works fine on a small page. will fix later

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,14 +1,12 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  min-height: 100vh;
   font-weight: normal;
+  width: 100%;
 }
 
-a,
-.green {
+a {
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
